--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bbc/react-transcript-editor",
   "description": "A React component to make transcribing audio and video easier and faster.",
-  "version": "1.3.0",
+  "version": "1.3.1-alpha.1",
   "keywords": [
     "transcript",
     "transcriptions",
