--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bbc/react-transcript-editor",
+  "name": "react-transcript-editor",
   "description": "A React component to make transcribing audio and video easier and faster.",
   "version": "1.3.1-alpha.1",
   "keywords": [
@@ -109,7 +109,7 @@
   "contributors": [
     {
       "name": "Pietro Passarelli",
-      "email": "pietro.passarelli@bbc.co.uk",
+      "email": "pietro.passarelli@gmail.co.uk",
       "url": "https://github.com/pietrop"
     },
     {
@@ -120,12 +120,12 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bbc/react-transcript-editor/issues"
+    "url": "https://github.com/pietrop/react-transcript-editor/issues"
   },
-  "homepage": "https://github.com/bbc/react-transcript-editor",
+  "homepage": "https://github.com/pietrop/react-transcript-editor",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bbc/react-transcript-editor.git"
+    "url": "git+https://github.com/pietrop/react-transcript-editor.git"
   },
   "browserslist": [
     ">0.2%",
